--- a/.github/workflows/workflow_1.yml
+++ b/.github/workflows/workflow_1.yml
@@ -40,8 +40,8 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository }}/python-ci-cd-demo:latest .
+          docker build -t ghcr.io/Explotion80/python-ci-cd-test/python-ci-cd-demo:latest .
 
       - name: Push Docker image
         run: |
-          docker push ghcr.io/${{ github.repository }}/python-ci-cd-demo:latest
+          docker push ghcr.io/Explotion80/python-ci-cd-test/python-ci-cd-demo:latest
