--- a/.github/workflows/workflow_1.yml
+++ b/.github/workflows/workflow_1.yml
@@ -35,7 +35,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ Explotion80 }}
+          username: Explotion80
           password: ${{ secrets.GITHUB_TOKEN_CI }}
 
       - name: Build Docker image
