--- a/.github/workflows/workflow_1.yml
+++ b/.github/workflows/workflow_1.yml
@@ -32,11 +32,11 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: Explotion80
-          password: ${{ secrets.GITHUB_TOKEN_CI }}
+          username: "Explotion80"
+          password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Build Docker image
         run: |
