--- a/.github/workflows/workflow_1.yml
+++ b/.github/workflows/workflow_1.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           registry: ghcr.io
           username: Explotion80
-          password: ${{ secrets.GHCR_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN_CI }}
 
       - name: Build Docker image
         run: |
